# cmake-haskell

./: CMakeLists.txt  Main.hs  README.md
cmake/: CMakeDetermineHaskellCompiler.cmake  CMakeHaskellCompiler.cmake.in  CMakeHaskellInformation.cmake  CMakeTestHaskellCompiler.cmake
